修改jvm参数指定方式，可通过参数指定，更加灵活。