@@ -27,12 +27,26 @@ RUN sed -i 's/file:\/dev\/urandom/file:\/dev\/.\/urandom/g' ${JRE_HOME}/lib/secu
 RUN apt-get update && apt-get install -y zip
 RUN unzip /opt/package/apache-tomcat-7.0.77.zip -d /opt/server
 ENV TOMCAT_HOME /opt/server/apache-tomcat-7.0.77
-RUN chmod 777 ${TOMCAT_HOME}/bin/*.sh
+WORKDIR ${TOMCAT_HOME}
+RUN chmod 777 bin/*.sh
 
 # put web package(将这个步骤移到-v挂载卷来处理)
-RUN rm -rf ${TOMCAT_HOME}/webapps/*
-COPY war ${TOMCAT_HOME}/webapps
+RUN rm -rf webapps/*
+COPY war webapps
+
+# copy run.sh
+COPY script /opt/script
+RUN chmod 777 /opt/script/run.sh
+
+# set jvm options
+ENV JAVA_OPTS="\
+-server \
+-Xms1024m \
+-Xmx1024m \
+-XX:PermSize=256M \
+-XX:MaxNewSize=512m \
+-XX:MaxPermSize=512m"
 
 # Commands when creating a new container
 EXPOSE 8080
-ENTRYPOINT ${TOMCAT_HOME}/bin/startup.sh && tail -F ${TOMCAT_HOME}/logs/catalina.out
+ENTRYPOINT ["/opt/script/run.sh"]
